test/typecheck/pass/dec_prelude.sail
default Order dec

$include <prelude.sail>
