test/typecheck/fail/empty_su.sail
default Order dec

$include <prelude.sail>

scattered union ast
end ast
